# bot-sports-empire-backend

./: .git-sync.sh  .gitignore  .memory_watcher_state.json  ACCOMPLISHMENTS_SUMMARY.md  AESTHETIC_IMPROVEMENTS.md  AGENTS.md  API.md  ARCHITECTURE_SUB_AGENTS.md  AUDIT.md  BOT_LIFECYCLE.md  CREATIVE_ENHANCEMENTS.md  CREATIVE_MILESTONE_ACTIVATION.md  CURRENT_STATE_BASELINE.md  DECISIONS.md  DECOMISSION_REPORT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE_NOW.md  DEPTHRENDER.md  DESIGN.md  DEVELOPER_ARCHITECTURE.md  DISCUSSION_BOARD_PLAN.md  DRAFT_BOARD_PLAN.md  DRAFT_DATABASE_SCHEMA.md  DRAFT_RL_RECOMMENDATION.md  DREAM_PROTOCOL.md  DYNASTYDROID_MILESTONES.qmd  DYNASTY_TRADES_PLAN.md  Dockerfile  Dockerfile.simple  FACTS.md  FIX_DEPLOYMENT.md  FUTURESELF.md  HEARTBEAT.md  IDENTITY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LIVING_MEMORY_QUESTIONS.md  MAXCLAW_RECURSIVE_LEARNING.md  MEMORY.backup.md  MEMORY.md  (+265 more)
bot-sports-empire/: .gitignore  4PM_CHECKIN_SUMMARY.md  BOT_REGISTRATION_README.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  NEXT_STEPS.md  PHASE1_ACTION_PLAN.md  PHASE5_COMPLETE_SUMMARY.md  PHASED_ROADMAP.md  PROJECT_STATUS.md  README.md  SLEEPER_INTEGRATION_SUMMARY.md  TESTING_STRATEGY.md  apply_aesthetic_updates.py  create_test_players.py  debug_leagues.py  demo_adp_cron.py  docker-compose.yml  draft.html  dynastydroid-landing-updated.html  dynastydroid-landing.html  fix_deployment_requirements.py  fix_stray_newline.py  fix_syntax.py  full_diagnostic.py  import_adp_simple.py  init_database.py  init_database_simple.py  (+50 more)
(+2651 files in other folders)
